tenzir/tests/ir/one_let_with_unknown_var.tql
// test: ir
// error: true

let $foo = $bar
